force-app/main/default/objects/CLC_Community_Group__c/CLC_Community_Group__c.object-meta.xml
<CustomObject>
    <description>Object to store attributes for Community Group data records</description>
    <label>Community Group</label>
    <nameField>
        <label>Community Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>