force-app/main/default/objects/CLC_Community_Group__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <formula>Group_Location__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingCity</label>
    <type>Text</type>
</CustomField>