force-app/main/default/objects/CLC_Community_Group__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <formula>Group_Location__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingPostalCode</label>
    <type>Text</type>
</CustomField>