force-app/main/default/objects/CLC_Community_Group__c/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <formula>Group_Location__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingState</label>
    <type>Text</type>
</CustomField>