force-app/main/default/objects/CLC_Community_Group__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <formula>Group_Location__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingStreet</label>
    <type>Text</type>
</CustomField>