force-app/main/default/objects/CLC_Community_Group__c/fields/Group_Leader__c.field-meta.xml
<CustomField>
    <fullName>Group_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who is acting Group Leader, this will change over time by election</description>
    <inlineHelpText>Contact who is acting Group Leader, this will change over time by election</inlineHelpText>
    <label>Group Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Community Groups</relationshipLabel>
    <relationshipName>Community_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>