force-app/main/default/objects/CLC_Community_Group__c/fields/Group_Location__c.field-meta.xml
<CustomField>
    <fullName>Group_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Household that is regularly hosting a community group</description>
    <inlineHelpText>Household that is regularly hosting a community group</inlineHelpText>
    <label>Group Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Groups</relationshipLabel>
    <relationshipName>Community_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>